--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
 			Fallback for browsers that don't support pseudo elements.
 		*/
 
-		background: url('./images/bg.jpg');
+		background: url('../images/bg.jpg');
 	}
 
 		body:before
@@ -56,25 +56,8 @@
 				set background-size to "cover".
 			*/
 
-			background: url('./images/bg.jpg');
+			background: url('../images/bg.jpg');
 			background-size: 100% 100%;
-		}
-
-		/*
-			The pseudo element below applies a noise pattern to the background image. It's
-			meant to help mask blurriness, but you can remove it if you don't like it.
-		*/
-
-		body:after
-		{
-			content: '';
-			position: fixed;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			background: url('images/overlay.png');
-			z-index: -1;
 		}
 	
 	body, input, textarea
@@ -90,7 +73,7 @@
 		color: #363636;
 	}
 
-	h1, h2, h3, h4,h5, h6
+	h1, h2, h3, h4, h5, h6
 	{
 		font-weight: 400;
 		color: #363636;
@@ -506,23 +489,6 @@
 				position: relative;
 				display: block;
 			}
-
-				/*
-					The pseudo element below applies a noise pattern to the "me" image. It's
-					meant to help mask blurriness, but you can remove it if you don't like it.
-				*/
-			
-				#me .pic:before
-				{
-					content: '';
-					position: absolute;
-					top: 0;
-					left: 0;
-					background: url('./images/overlay.png');
-					width: 100%;
-					height: 100%;
-					z-index: 1;
-				}
 
 /*********************************************************************************/
 /* Footer                                                                        */
