Signed-off-by: christopherJosephDean@gmail.com <christopherJosephDean@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@
 				set background-size to "cover".
 			*/
 
-			background: url('../images/bg.jpg');
+			background: url('../images/bg.png');
 			background-size: 100% 100%;
 		}
 	
