--- a/css/noscript.css
+++ b/css/noscript.css
@@ -1,5 +1,5 @@
 /*
-	Astral 1.0 by HTML5 Up!
+	Astral 2.1 by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
