--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -1,5 +1,5 @@
 /*
-	Astral 1.0 by HTML5 Up!
+	Astral 2.1 by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -93,12 +93,13 @@
 	
 		#nav a
 		{
-			font-size: 2.5em;
+			font-size: 2em;
 			opacity: 0.5;
 			outline: 0;
 			width: 1.5em;
 			height: 1.5em;
 			line-height: 1.35em;
+			margin: 0 0.25em 0 0.25em;
 		}
 		
 			#nav a:active
